tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generics_value_kind_mismatch_u32_u64/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
   ┌─ src/main.nr:18:26
   │
18 │             self.storage[self.len] = elem;
   │                          --------
   │

error: Duplicate definitions of import with name BoundedVec found
  ┌─ std/aes128.nr:1:1
  │
1 │ #[foreign(aes128_encrypt)]
  │ - Second import found here
  │
  ┌─ src/main.nr:2:12
  │
2 │     struct BoundedVec<T, let MaxLen: u32> {
  │            ---------- First import found here
  │

error: Integers must have the same bit width LHS is 64, RHS is 32
   ┌─ src/main.nr:17:20
   │
17 │             assert(self.len < MaxLen, "push out of bounds");
   │                    -----------------
   │

Aborting due to 2 previous errors
