tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generics_value_kind_mismatch_u32_u64/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Duplicate definitions of import with name BoundedVec found
  ┌─ std/aes128.nr:1:1
  │
1 │ #[foreign(aes128_encrypt)]
  │ - Second import found here
  │
  ┌─ src/main.nr:2:12
  │
2 │     struct BoundedVec<T, let MaxLen: u32> {
  │            ---------- First import found here
  │

error: Integers must have the same bit width LHS is 64, RHS is 32
   ┌─ src/main.nr:17:20
   │
17 │             assert(self.len < MaxLen, "push out of bounds");
   │                    -----------------
   │

error: Indexing arrays and slices must be done with `u32`, not `u64`
   ┌─ src/main.nr:18:26
   │
18 │             self.storage[self.len] = elem;
   │                          --------
   │

Aborting due to 3 previous errors
